# sudograph

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh  package.json  publish.sh  test-schema.graphql
client/: LICENSE.txt  bin.js  index.d.ts  package-lock.json  (+3 more)
examples/basic/: Cargo.toml  dfx.json  package-lock.json  package.json  webpack.config.js
examples/basic/canisters/blog_frontend/: index.html  index.ts  package-lock.json  package.json
examples/basic/canisters/blog_frontend/elements/: sudo-app.ts  sudo-blog-post.ts  sudo-draft.ts
examples/basic/canisters/blog_frontend/types/: external.d.ts  index.d.ts
examples/basic/canisters/frontend/: package-lock.json  package.json
examples/basic/canisters/frontend/elements/: frontend-app.ts  frontend-create-user.ts
examples/basic/canisters/graphql/: Cargo.toml  schema.graphql
examples/basic/canisters/graphql/src/: graphql.did  graphql.rs  schema.graphql
examples/basic/canisters/playground/: index.html  index.js  package-lock.json  package.json  playground.js
examples/basic/src/: Cargo.toml  basic.did  basic.rs
sudodb/: Cargo.toml
sudodb/src/: clear.rs  create.rs  delete.rs  lib.rs  read.rs  update.rs
sudograph-generate/: Cargo.toml
sudograph-generate/src/: lib.rs
sudograph-generate/src/custom_resolvers/: generate_custom_mutation_struct.rs  generate_custom_query_struct.rs  utilities.rs
sudograph-generate/src/enums/: enum_type.rs
sudograph-generate/src/mutation_resolvers/: create.rs  delete.rs  init.rs  update.rs  upsert.rs
sudograph-generate/src/query_resolvers/: read.rs
sudograph-generate/src/settings/: generate_settings.rs
sudograph-generate/src/structs/: create_input.rs  delete_input.rs  object_type.rs  order_input.rs  read_blob_input.rs  read_boolean_input.rs  read_date_input.rs  read_enum_input.rs  read_float_input.rs  read_id_input.rs  read_input.rs  read_int_input.rs  read_json_input.rs  read_relation_input.rs  read_string_input.rs  update_input.rs  upsert_input.rs
sudograph-tests/: Cargo.toml  dfx.json  package.json  run-tests.sh
sudograph-tests/canisters/create/: Cargo.toml
sudograph-tests/canisters/create/src/: lib.rs
sudograph-tests/canisters/delete/: Cargo.toml
sudograph-tests/canisters/delete/src/: lib.rs
sudograph-tests/canisters/graphql/: Cargo.toml
sudograph-tests/canisters/graphql/src/: lib.did  lib.rs  schema.graphql  test_delete_schema.graphql  test_limit_schema.graphql  test_order_schema.graphql  test_search_schema.graphql  test_update_disconnect_schema.graphql
sudograph-tests/canisters/graphql/src/arbitraries/limit/: limit_create.rs  limit_read.rs
sudograph-tests/canisters/graphql/src/arbitraries/offset/: offset_create.rs
sudograph-tests/canisters/graphql/src/arbitraries/order/: order_create.rs
sudograph-tests/canisters/graphql/src/arbitraries/queries/: mutation_create.rs  mutation_update.rs  queries.rs
sudograph-tests/canisters/graphql/src/arbitraries/search/: search_create.rs  search_input.rs  search_read.rs
sudograph-tests/canisters/graphql/src/tests/create/: test_create.rs
sudograph-tests/canisters/graphql/src/tests/delete/: test_delete.rs
sudograph-tests/canisters/graphql/src/tests/limit/: test_limit.rs
sudograph-tests/canisters/graphql/src/utilities/: assert.rs
sudograph-tests/canisters/limit/: Cargo.toml
sudograph-tests/canisters/limit/src/: lib.rs
sudograph-tests/canisters/offset/: Cargo.toml
sudograph-tests/canisters/offset/src/: lib.rs  schema.graphql
sudograph-tests/canisters/order/: Cargo.toml
sudograph-tests/canisters/order/src/: lib.rs  schema.graphql
sudograph-tests/canisters/read/: Cargo.toml
sudograph-tests/canisters/read/src/: lib.rs
sudograph-tests/canisters/search/: Cargo.toml
sudograph-tests/canisters/search/src/: lib.rs
sudograph-tests/canisters/test_utilities/: Cargo.toml
sudograph-tests/canisters/test_utilities/src/: lib.rs
sudograph-tests/canisters/test_utilities/src/utilities/: assert.rs  graphql.rs
sudograph-tests/canisters/update/: Cargo.toml
sudograph-tests/canisters/update/src/: lib.rs
sudograph-tests/canisters/update_disconnect/: Cargo.toml
sudograph-tests/canisters/update_disconnect/src/: lib.rs
sudograph-tests/src/: lib.rs
sudograph-tests/src/arbitraries/: arb_enum.rs  datetime.rs  field.rs  json.rs  object_type.rs  string.rs  sudograph.rs
sudograph-tests/src/arbitraries/limit/: limit_create.rs  limit_read.rs
sudograph-tests/src/arbitraries/offset/: offset_create.rs
sudograph-tests/src/arbitraries/order/: order_create.rs  order_input.rs  order_map.rs  order_read.rs
sudograph-tests/src/arbitraries/queries/: mutation_create.rs  mutation_update.rs  queries.rs
sudograph-tests/src/arbitraries/queries/input_info_strategies/: input_info_strategies.rs  input_info_strategy_blob.rs  input_info_strategy_boolean.rs  input_info_strategy_date.rs  input_info_strategy_enum.rs  input_info_strategy_float.rs  input_info_strategy_id.rs  input_info_strategy_int.rs  input_info_strategy_json.rs  input_info_strategy_nullable.rs  input_info_strategy_relation_many.rs  input_info_strategy_relation_one.rs  input_info_strategy_string.rs
sudograph-tests/src/arbitraries/queries/input_value_strategies/: input_value_strategies.rs  input_value_strategy_blob.rs  input_value_strategy_boolean.rs  input_value_strategy_date.rs  input_value_strategy_enum.rs  input_value_strategy_float.rs  input_value_strategy_id.rs  input_value_strategy_int.rs  input_value_strategy_json.rs  input_value_strategy_nullable.rs  input_value_strategy_relation_many.rs  input_value_strategy_relation_one.rs  input_value_strategy_string.rs
sudograph-tests/src/arbitraries/queries/mutation_delete/: mutation_delete.rs
sudograph-tests/src/arbitraries/queries/mutation_update_disconnect/: mutation_update_disconnect.rs
sudograph-tests/src/arbitraries/search/: search_create.rs  search_input.rs  search_read.rs
sudograph-tests/src/utilities/: agent.rs  assert.rs  graphql.rs
sudograph-tests/tests/: canister.rs  create.rs  delete.rs  limit.rs  offset.rs  order.rs  read.rs  search.rs  update.rs  update_disconnect.rs
(+246 files in other folders)
