[package]
name = "sudograph"
version = "0.1.0"
authors = ["Jordan Last <jordan.michael.last@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://sudograph.org"
description = "GraphQL database for the Internet Computer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudodb = { version = "0.1.0", path = "./sudodb" }
sudograph-generate = { version = "0.1.0", path = "./sudograph-generate" }
async-graphql = "2.5.9"
getrandom = { version = "0.2.2", features = ["custom"] }
serde_json = "1.0.64"
serde = "1.0.123"
ic-cdk = { version = "0.2.1" }
ic-cdk-macros = { version = "0.2.1" }
rand = "0.8.3"