[package]
name = "sudograph"
version = "0.4.3"
authors = ["Jordan Last <jordan.michael.last@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://sudograph.org"
description = "GraphQL database for the Internet Computer"

[workspace]
members = [
    "sudograph-tests",
]

[dependencies]
sudodb = { version = "0.4.3", path = "./sudodb" }
sudograph-generate = { version = "0.4.3", path = "./sudograph-generate" }
async-graphql = "2.5.9"
getrandom = { version = "0.2.2", features = ["custom"] }
serde_json = "1.0.64"
serde = "1.0.123"
ic-cdk = { version = "0.3.0" }
ic-cdk-macros = { version = "0.3.0" }
rand = "0.8.3"
graphql-parser = "0.3.0"