[package]
name = "sudodb"
version = "0.3.0-beta.16"
authors = ["Jordan Last <jordan.michael.last@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Relational database for the Internet Computer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
sha2 = "0.9.3"
rand = "0.8.3"
base32 = "0.4.0"
ic-cdk = { version = "0.2.1" }