[package]
name = "sudograph-generate"
version = "0.3.0-beta.21"
authors = ["Jordan Last <jordan.michael.last@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Procedural macro for Sudograph"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.61"
quote = "1.0.9"
graphql-parser = "0.3.0"
proc-macro2 = "1.0.24"