[package]
name = "basic"
version = "0.0.0"
authors = ["Jordan Last <jordan.michael.last@gmail.com>"]
edition = "2018"

[lib]
path = "basic.rs"
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { path = "../../../../cdk-rs/src/ic-cdk", version = "0.2.1" }
ic-cdk-macros = { path = "../../../../cdk-rs/src/ic-cdk-macros", version = "0.2.1" }
sudodb = { path = "../../../../sudodb" }
sudograph = { path = "../../../../sudograph" }
async-graphql = "2.5.9"
serde_json = "1.0.64"
getrandom = { version = "0.2.2", features = ["custom"] }