[package]
name = "order"
version = "0.0.0"
authors = ["Jordan Last <jordan.michael.last@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sudograph = { version = "0.4.0", path = "../../../" }
ic-cdk = { version = "0.3.0" }
ic-cdk-macros = { version = "0.3.0" }
# TODO it would be ideal to get the small changes required for proptest upstreamed into the true proptest repo
proptest = { git = "https://github.com/sudograph/proptest.git", default-features = false, features = ["std"] }
# proptest = { version = "1.0.0", path = "../../../../proptest/proptest", default-features = false, features = ["std"] }
getrandom = { version = "0.2.2", features = ["custom"] }
graphql-parser = "0.3.0"
serde_json = { version = "1.0.64", features = ["float_roundtrip"] }
chrono = "0.4.19"
serde = "1.0.126"
futures = "0.3.16"
test_utilities = { path = "../test_utilities" }